# rustgbot

./: .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: ci-goreleaser.yml  ci.yml  release.yml
common/: Cargo.toml
common/src/: lib.rs  models.rs
processor/bili/: Cargo.toml
processor/bili/src/: lib.rs
processor/nga/: Cargo.toml
processor/nga/src/: bbcode.rs  error.rs  fetcher.rs  lib.rs  page.rs  tests.rs  utils.rs
processor/pixiv/: Cargo.toml
processor/pixiv/src/: api.rs  auth.rs  constants.rs  lib.rs  models.rs  processor.rs  tests.rs  utils.rs
processor/x/: Cargo.toml
processor/x/src/: lib.rs
rustgbot/: Cargo.toml
rustgbot/src/: bot.rs  commands.rs  main.rs  tests.rs
telebotrs-main/: Cargo.toml
