[profile.release]
lto = true
strip = true

[workspace]
members = ["rustgbot", "common", "processor/*"]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.49.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

async-trait = "0.1.89"

# HTTP client
reqwest = { version = "0.12.28", default-features = false, features = [
    "charset",
] }

# Logging
log = "0.4.29"
env_logger = "0.11.8"

# Error handling
anyhow = "1.0.100"

# Text processing
regex = "1.12.2"
scraper = "0.25.0"
tabled = "0.20.0"
human_bytes = { version = "0.4.3", default-features = false }
byte-unit = "5.2.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Utilities
url = "2.5.8"
rand = "0.9.2"
dotenv = "0.15.0"

# Telegram bot framework
teloxide = { version = "0.17.0", default-features = false, features = [
    "macros",
    "rustls",
    "ctrlc_handler",
] }
