[profile.release]
lto = true
strip = true

[workspace]
members = ["rustgbot", "common", "processor/*"]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.52.3", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

async-trait = "0.1.89"

# HTTP client
reqwest = { version = "0.13.4", default-features = false, features = [
    "charset",
    "rustls",
] }

# Logging
log = "0.4.33"
env_logger = "0.11.10"

# Error handling
anyhow = "1.0.102"

# Text processing
regex = "1.12.4"
scraper = "0.27.0"
tabled = "0.21.0"
human_bytes = { version = "0.4.3", default-features = false }
byte-unit = "5.2.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Utilities
url = "2.5.8"
rand = "0.10.1"
dotenv = "0.15.0"

# Telegram bot framework (pinned git for reqwest 0.13 support)
teloxide = { git = "https://github.com/teloxide/teloxide.git", rev = "0ca6f7d22410fc043bc52c165f2e69741fd83f1c", default-features = false, features = [
    "macros",
    "rustls",
    "ctrlc_handler",
] }

# Telegram bot API client (for Bot API 10.1+ features like sendRichMessage)
frankenstein = { version = "0.50.1", default-features = false, features = [
    "client-reqwest",
] }

# Image size detection
imagesize = "0.14.0"
