[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
# 只包含工具函数需要的最小依赖
reqwest = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
human_bytes = { workspace = true }
byte-unit = { workspace = true }
