[package]
name = "rustgbot"
version = "0.1.18"
edition = "2024"

[[bin]]
name = "rustgbot"
path = "src/main.rs"

[dependencies]
# Workspace crates
processor-bili = { path = "../processor/bili" }
processor-nga = { path = "../processor/nga" }
processor-pixiv = { path = "../processor/pixiv" }
processor-x = { path = "../processor/x" }
common = { path = "../common" }

# External dependencies - using workspace versions
teloxide = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
dotenv = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
