[package]
name = "processor-pixiv"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace crates
common = { path = "../../common" }

# External dependencies
log = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
url = { workspace = true }
